bizinikiwi/pezframe/support/test/tests/construct_runtime_ui/missing_origin_generic_on_module_with_instance.stderr
error: Instantiable pezpallet with no generic `Origin` cannot be constructed: pezpallet `Balance` must have generic `Origin`
  --> tests/construct_runtime_ui/missing_origin_generic_on_module_with_instance.rs:24:3
   |
24 |         Balance: balances::<Instance1> expanded::{}::{Origin},
   |         ^^^^^^^
